--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
 body {
-    background-color: gray;
+    /* background-color: gray; */
+}
+
+h1 {
+    color: #7FFF00 ;
+}
+
+p {
+    color: #8B008B;
 }
